- fixed NPC items & additional data, such as mounts, emotestate etc to be loaded  correctly from both addon tables
- fixed #npc add -d <params>