@@ -8,6 +8,7 @@ using WCell.Constants.Spells;
 using WCell.Core.Initialization;
 using WCell.RealmServer.Spells;
 using WCell.RealmServer.Spells.Auras;
+using WCell.RealmServer.Spells.Auras.Misc;
 
 namespace WCell.Addons.Default.Spells.DeathKnight
 {
@@ -16,7 +17,14 @@ namespace WCell.Addons.Default.Spells.DeathKnight
 		[Initialization(InitializationPass.Second)]
 		public static void FixIt()
 		{
-			
+			// Butchery lets you "generate up to 10 runic power" upon kill
+			SpellLineId.DeathKnightBloodButchery.Apply(spell =>
+			{
+				var effect = spell.GetEffect(AuraType.Dummy);
+				effect.IsProc = true;
+				effect.ClearAffectMask();
+				effect.AuraEffectHandlerCreator = () => new ProcEnergizeHandler();
+			});
 		}
 	}
 }
