@@ -62,22 +62,6 @@ namespace WCell.RealmServer.Entities
 		public static uint MinStandStillDelay = 400;
 
 		/// <summary>
-		/// The default delay between 2 Regeneration ticks (for Health and the default Power) in seconds
-		/// </summary>
-		public static float RegenTickMultiplier = 5.0f;
-
-		public static float RegenTickDelay = 1.0f;
-
-		/// <summary>
-		/// The amount of milliseconds for the time of "Interrupted" power regen
-		/// See: http://www.wowwiki.com/Formulas:Mana_Regen#Five_Second_Rule
-		/// </summary>
-		public static uint PowerRegenInterruptedCooldown = 5000;
-
-
-		public static int PowerRegenInterruptedPct = 25;
-
-		/// <summary>
 		/// The delay between the last hostile activity and until
 		/// the Unit officially leaves Combat-mode in millis.
 		/// Mostly effects Characters.
@@ -601,7 +585,7 @@ namespace WCell.RealmServer.Entities
 			get
 			{
 				return PowerType == PowerType.Mana && m_spellCast != null &&
-					((Environment.TickCount - m_spellCast.StartTime) < PowerRegenInterruptedCooldown || m_spellCast.IsChanneling);
+					((Environment.TickCount - m_spellCast.StartTime) < PowerFormulas.PowerRegenInterruptedCooldown || m_spellCast.IsChanneling);
 			}
 		}
 
@@ -664,7 +648,7 @@ namespace WCell.RealmServer.Entities
 		public void InitializeRegeneration()
 		{
 			this.UpdatePowerRegen();
-			m_RegenerationDelay = RegenTickDelay;
+			m_RegenerationDelay = PowerFormulas.RegenTickDelaySeconds;
 			m_regenTimer = new TimerEntry(0.0f, m_RegenerationDelay, Regenerate);
 			m_regenTimer.Start();
 			m_regenerates = true;
