@@ -15,6 +15,7 @@
  *************************************************************************/
 
 using WCell.RealmServer.Entities;
+using WCell.RealmServer.Formulas;
 
 namespace WCell.RealmServer.Spells.Auras.Handlers
 {
@@ -31,7 +32,7 @@ namespace WCell.RealmServer.Spells.Auras.Handlers
 
 		protected override void Remove(bool cancelled)
 		{
-			Owner.ManaRegenPerTickInterruptedPct = Unit.PowerRegenInterruptedPct;
+			Owner.ManaRegenPerTickInterruptedPct = PowerFormulas.PowerRegenInterruptedPct;
 		}
 	}
 };
